tests/fail/t2.hir
// 2 : month - wrong year
// syntax error

module datetime {
    def date(){
        x1:month = 20196-05:month; // wrong year
    }
}
